# lean-tools-mcp

./: .gitignore  LICENSE  LSP_DYNAMIC_FILE_ISSUE.md  MODIFICATIONS_SUMMARY.md  PATCH_TOOL_FINAL.md  PATCH_TOOL_SUMMARY.md  README.md  SYNTAX_AWARE_PATCHING.md  pyproject.toml  test_modifications.py  test_patch_tool.py
docs/: 0227.md  0227_phase2.md  0227_phase2_mathlib_bench.md  bench_memory_baseline_mathlib.json  bench_memory_baseline_no_mathlib.json  bench_memory_inprocess.json  bench_memory_lean5_inprocess.json  bench_memory_lean5_process.json  bench_memory_lean_inprocess.json  bench_memory_lean_process.json  bench_memory_mathlib5_inprocess.json  bench_memory_mathlib5_process.json  bench_memory_mathlib_inprocess.json  bench_memory_mathlib_process.json  bench_memory_mathlib_v429_inprocess.json  bench_memory_mathlib_v429_process.json  bench_memory_process.json  tools.md  项目总结.md
docs/plans/: 2026-03-16-lean-build-code-actions-plan.md  (+1 more)
lean/: lake-manifest.json  lakefile.lean
lean_tools_mcp/: __init__.py  config.py  server.py
scripts/: bench_memory.py  build_lean.py  one_click_setup.sh  test_inprocess.py
tests/: __init__.py  conftest.py  test_build.py  test_code_actions.py  test_completions.py  test_config.py  test_file_manager.py  test_file_ops.py  test_hover.py  test_integration.py  test_lean_meta.py  test_llm_client.py  test_multi_attempt.py  test_patch.py  test_project_manager.py  test_protocol.py  test_rate_limiter.py  test_run_code.py  test_search.py  test_server.py  test_sse.py  test_types.py  test_unified_search.py  test_version.py
(+112 files in other folders)
