[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lean-tools-mcp"
version = "0.1.0"
description = "MCP Server for Lean 4 tools — LSP-backed, high-concurrency"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
sse = [
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "sse-starlette>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
lean-tools-mcp = "lean_tools_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["lean_tools_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
